Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30829

NTLM proxy authentication is broken

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 5.3.2
    • 5.0.1, 5.0.2
    • Network: Proxies
    • None

    Description

      In Qt 5, NTLM (and NTLM SSPI) proxy authentication seems to be broken.

      Tested using a custom Qt 5 build from git (qtbase rev 6c879b9b7c5099455a29c95b24d6cb7e69baff99).

      Description and observations:

      • I am connecting using a HTTP proxy that requires NTLM authentication
        (browsers work ok, both with NTLM SSPI and manually-provided username+password)
      • HTTP(s) connections from Qt do not work, not with QNetworkManager
        nor directly with QTcpSocket
      • Qt doesn't even try to authenticate using NTLM if I don't provide
        some credentials for QAuthenticator in proxyAuthenticationRequired slot. (just closes the connection when 407 is received, whereas documentation says that it should automatically try the system login+password)
      • When correct username and password are manually given to
        QAuthenticator (in proxyAuthenticationRequired slot), the proxy gives
        200 OK but there is no traffic after that.
      • Trying to set QAuthenticator user and password to empty strings does
        not trigger SSPI, it just makes Qt send NULLs as username and
        password

      After applying the original NTLM SSPI patches from Aron Rosenberg on top of Qt 4.8.3, the authentication works, although I still have to provide empty username and non-empty password in order to get SSPI working.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            shkearns Shane Kearns
            jaritenhunen Jari Tenhunen
            Votes:
            2 Vote for this issue
            Watchers:
            9 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes