src/network/kernel/qauthenticator.cpp
@@ -430,9 +430,7 @@ void QAuthenticatorPrivate::parseHttpResponse(const QList<QPair<QByteArray, QByt
             phase = Done;
         break;
     case Ntlm:
-        // #### extract from header
-        if (user.isEmpty() && password.isEmpty())
-            phase = Done;
+        // work is done in calculateResponse()
         break;
     case DigestMd5: {
         this->options[QLatin1String("realm")] = realm = QString::fromLatin1(options.value("realm"));
